# MetagenomeGenerator

./: .gitignore  Detailed_Use_Cases.md  LICENSE  PUSH_TO_GITHUB.md  README.md  environment.yml  main.py  pyproject.toml
docs/: DATA_PREPARATION_COMPARISON.md  improvements.md
snapshots/: accession_snapshot_2026-03-10.json
src/metagenome_generator/: __init__.py  __main__.py  accession_snapshot.py  benchmark_recipe.py  blastn_filter.py  chunk_genomes.py  cli.py  download_genomes.py  genome_layout.py  ncbi_search.py  seeker_wrapper.py  similarity_filter.py  temporal_split.py  viral_taxonomy.py
tests/: README_VALIDATION_TESTS.md  test_benchmark_recipe_diversity.py  test_cli_validation.py
